5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1594_1803.log
== TEST (2019-03-27 13:11:33) 
-- CODE:
num=int(input("numero de 4 digitos: "))

n1=num//1000	
n2=(num//100)%10
n3=(num//10)%10
n4=num%10

N1=(n5*5)
N2=(n4*4)
N3=(n3*3)
N4=(n4*2)
W=(N1+N2+N3+N4)
print(W%11)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    N1=(n5*5)
NameError: name 'n5' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:11:54) 
-- CODE:
num=int(input("numero de 4 digitos: "))

n1=num//1000	
n2=(num//100)%10
n3=(num//10)%10
n4=num%10

N1=(n1*5)
N2=(n2*4)
N3=(n3*3)
N4=(n4*2)
W=(N1+N2+N3+N4)
print(W%11)


-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:12:03) 
-- CODE:
num=int(input("numero de 4 digitos: "))

n1=num//1000	
n2=(num//100)%10
n3=(num//10)%10
n4=num%10

N1=(n1*5)
N2=(n2*4)
N3=(n3*3)
N4=(n4*2)
W=(N1+N2+N3+N4)
print(W%11)


-- EXECUTION TIME:
0.143561
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:18:46) 
-- CODE:
num=int(input("numero de 4 digitos: "))

n1=num//1000	
n2=(num//100)%10
n3=(num//10)%10
n4=num%10

N1=(n1*5)
N2=(n2*4)
N3=(n3*3)
N4=(n4*2)
W=(N1+N2+N3+N4)
print(W%11)


-- EXECUTION TIME:
0.149932
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
